--- a/MyFirstApp/app/src/main/res/layout/word_and_translate.xml
+++ b/MyFirstApp/app/src/main/res/layout/word_and_translate.xml
@@ -6,25 +6,24 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/word"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="0dp"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:hint="@string/word"
-        android:textSize="30sp"
-        tools:text="Кошка"/>
-
-    <TextView
         android:id="@+id/translate"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/word"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:hint="@string/translate"
         android:textSize="30sp"
         tools:text="Cat" />
+
+    <TextView
+        android:id="@+id/word"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:hint="@string/word"
+        android:textSize="30sp"
+        tools:text="Кошка" />
 </LinearLayout>
