--- a/MyFirstApp/app/src/main/res/values/colors.xml
+++ b/MyFirstApp/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorItem">#104BA9</color>
+    <color name="colorFon">#398ED4</color>
+    <color name="colorText">#FFFFFF</color>
 </resources>
